--- a/assets/style.css
+++ b/assets/style.css
@@ -45,7 +45,7 @@
 }
 
 .jumbo {
-    background-image: url(img/logo.svg);
+    background-image: url(/img/logo.svg);
 	padding-top: 3rem;
 	padding-bottom: 4rem;
 }
