--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,3 @@
-/* reset */
 
 * {
 	margin: 0;
@@ -6,14 +5,11 @@
 	box-sizing: border-box;
 }
 
-/* general styles */
-
 .container {
 	max-width: 1000px;
 	margin-inline: auto;
 	padding-inline: 1rem;
 }
-
 
 .main-list {
 	display: flex;
@@ -29,16 +25,13 @@
 	height: 100%;
 	white-space: nowrap;
 }
-/* header */
+
 
 .navbar {
-	height: 4rem; /* TODO: check the value */
-	background-color: rgb(2, 41, 132); /* TODO: check the value */
+	height: 4rem;
+	background-color: rgb(2, 41, 132); 
 }
 
-.link{
-    
-}
 .navbar .container {
 	display: flex;
 	justify-content: space-between;
@@ -56,22 +49,50 @@
 	cursor: pointer;
 }
 
-.img{
-   max-width: 1700px;
-}
-.jumbo .content {
-	max-width: 500px;
-	margin-inline: auto;
-	padding-inline: 1rem;
-    
-}
-
 .jumbo {
-    background-image: url(/img/jumbo.png);
+    background-image: url(../img/jumbo.png);
+	background-size: cover;
 	padding-top: 3rem;
 	padding-bottom: 4rem;
 }
+.jumbo .content {
 
+	max-width: 500px;
+	margin-inline: auto;
+	padding-inline: 1rem;
+	text-align: center;
+	color: white;
+	display:flex;
+	flex-direction: column;
+	justify-content: space-around;
+}
+.tasti{
+	display:flex;
+	justify-content: space-around;
+	max-width: 500px;
+	margin-top: 5px;
+	
+}
+
+.download{
+	color: black;
+	background-color: white;
+	height: 30px;
+	width: auto;
+	border-radius: 5px;
+	display: flex;
+	align-items: center;
+}
+
+.open{
+	color: white;
+	background-color: rgb(0, 0, 27);
+	height: 30px;
+	width: auto;
+	border-radius: 5px;
+	display: flex;
+	align-items: center;
+}
 /* main */
 
 main section {
