--- a/assets/style.css
+++ b/assets/style.css
@@ -5,6 +5,9 @@
 	box-sizing: border-box;
 }
 
+html{
+	font-family: whitney, Arial, Helvetica, sans-serif;
+}
 h1{
 	font-size: 30px;
 }
@@ -38,7 +41,7 @@ h2{
 
 .navbar {
 	height: 4rem;
-	background-color: rgb(2, 41, 132); 
+	background-color: #3261e0; 
 }
 
 .navbar .container {
@@ -54,7 +57,7 @@ h2{
 }
 
 .navbar .container > *:hover {
-	background-color: rgb(42, 77, 165);
+	background-color:#3261e0;
 	cursor: pointer;
 }
 
